After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 616574 - crash at shell-app-system.c:655
crash at shell-app-system.c:655
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2010-04-22 23:38 UTC by Maxim Ermilov
Modified: 2010-04-23 14:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
known_vendor_prefixes should be NULL terminated (879 bytes, patch)
2010-04-22 23:41 UTC, Maxim Ermilov
committed Details | Review

Description Maxim Ermilov 2010-04-22 23:38:49 UTC
patch follow
Comment 1 Maxim Ermilov 2010-04-22 23:41:21 UTC
Created attachment 159377 [details] [review]
known_vendor_prefixes should be NULL terminated
Comment 2 Colin Walters 2010-04-23 14:45:26 UTC
Review of attachment 159377 [details] [review]:

Looks good.  Can you prefix the commit message with [ShellAppSystem] ?  I don't think we have a formal commit message policy but I like the prefix scheme.