known_vendor_prefixes should be NULL terminated

https://bugzilla.gnome.org/show_bug.cgi?id=616574